--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -33,7 +33,7 @@
 {% if author.orcid %}
   <li>
     <a href="https://orcid.org/{{ author.orcid }}">
-      <i class="ai ai-orcid ai-lg"></i> ORCID
+      <i class="ai ai-orcid"></i> ORCID
     </a>
   </li>
 {% endif %}
