--- a/_layouts/entry.html
+++ b/_layouts/entry.html
@@ -3,10 +3,19 @@
 
 {{ reference }}
 
+<!--
 {% if entry.doi %}
-  <a href="https://doi.org/{{ entry.doi }}"><i class="ai ai-doi ai-lg"></i></a>
+  <a href="https://doi.org/{{ entry.doi }}"><i class="ai ai-doi"></i></a>
 {% endif %}
+-->
 
 {% if entry.link %}
   <a href="{{ site.scholar.repository }}/{{ entry.link }}"><i class="fas fa-file-pdf"></i></a>
 {% endif %}
+
+<!--
+<details close>
+    <summary>Abstract</summary>
+    <span class="notice">{{ entry.abstract }}</span>
+</details>
+-->
