added experimental abstract

--- a/_layouts/entry.html
+++ b/_layouts/entry.html
@@ -11,9 +11,13 @@
   <a href="{{ site.scholar.repository }}/{{ entry.link }}"><i class="fas fa-file-pdf"></i></a>
 {% endif %}
 
-<!--
+<style>
+details {
+    display: inline;
+}
+</style>
+
 <details close>
-    <summary>Abstract</summary>
+    <summary></summary>
     <span class="notice">{{ entry.abstract }}</span>
 </details>
--->
