--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2,7 +2,7 @@
    Default skin
    ========================================================================== */
 /*!
- * Minimal Mistakes Jekyll Theme 4.14.2 by Michael Rose
+ * Minimal Mistakes Jekyll Theme 4.16.3 by Michael Rose
  * Copyright 2013-2019 Michael Rose - mademistakes.com | @mmistakes
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
 */
@@ -1373,15 +1373,6 @@ th {
     .btn--twitter:hover {
       background-color: #448abe;
       color: #fff; }
-  .btn--google-plus {
-    background-color: #dd4b39;
-    color: #fff; }
-    .btn--google-plus:visited {
-      background-color: #dd4b39;
-      color: #fff; }
-    .btn--google-plus:hover {
-      background-color: #b13c2e;
-      color: #fff; }
   .btn--linkedin {
     background-color: #007bb6;
     color: #fff; }
@@ -1683,6 +1674,9 @@ th {
     .masthead__inner-wrap a {
       text-decoration: none; }
 
+.site-logo img {
+  max-height: 2rem; }
+
 .site-title {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1867,6 +1861,9 @@ th {
     text-decoration: none; }
     .greedy-nav a:hover {
       color: #53595e; }
+    .greedy-nav a.site-logo {
+      margin-left: 0;
+      margin-right: 0.5rem; }
     .greedy-nav a.site-title {
       margin-left: 0; }
   .greedy-nav__toggle {
@@ -2104,6 +2101,9 @@ th {
     background: #6f777d;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px; }
+  .toc .active a {
+    background-color: #e2e4e5;
+    color: #494e52; }
 
 .toc__menu {
   margin: 0;
@@ -2633,6 +2633,17 @@ body:hover .visually-hidden button {
   white-space: nowrap; }
 
 /*
+   Task lists
+   ========================================================================== */
+.task-list {
+  padding: 0; }
+  .task-list li {
+    list-style-type: none; }
+  .task-list .task-list-item-checkbox {
+    margin-right: 0.5em;
+    opacity: 1; }
+
+/*
    Alignment
    ========================================================================== */
 /* clearfix */
@@ -2719,10 +2730,6 @@ body:hover .visually-hidden button {
   color: #171516; }
 .social-icons .fa-gitlab {
   color: #e24329; }
-.social-icons .fa-google-plus,
-.social-icons .fa-google-plus-square,
-.social-icons .fa-google-plus-g {
-  color: #dd4b39; }
 .social-icons .fa-instagram {
   color: #517fa4; }
 .social-icons .fa-lastfm,
@@ -3391,6 +3398,8 @@ a.reversefootnote {
     top: 0;
     right: 0;
     bottom: 0; }
+  .archive__item-title a[rel="permalink"]::before {
+    content: none; }
   .archive__item-title a + a {
     opacity: 0.5; }
 
